--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Counter</title>
+    <title>Roll Game</title>
     <link rel="shortcut icon" href="#" />
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap"
@@ -15,11 +15,14 @@
   </head>
   <body>
     <header>
-      <h1>Roll Play</h1>
+      <h1>Roll Game</h1>
     </header>
     <section id="events">
-      <button v-on:click="generateNumber()">Roll!</button>
-      <p>{{ randomNumber }}</p>
+      <button @click="generateNumber">Roll!</button>
+      <p v-if="playedNumbers.length === 0">No rolls played!</p>
+      <ul v-else>
+        <li v-for="number in playedNumbers">{{ number }}</li>
+      </ul>
     </section>
   </body>
 </html>
